classes/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMI_COLON declistlast block SEMI_COLON
Rule 2     declistlast -> declist
Rule 3     declistlast -> <empty>
Rule 4     declist -> dec
Rule 5     declist -> declist dec
Rule 6     dec -> vardec
Rule 7     dec -> procdec
Rule 8     dec -> funcdec
Rule 9     type -> INT
Rule 10    type -> REAL
Rule 11    type -> BOOL
Rule 12    iddec -> ID
Rule 13    iddec -> ID ASSIGN exp
Rule 14    idlist -> iddec
Rule 15    idlist -> idlist SEPARATOR iddec
Rule 16    vardec -> type idlist SEMI_COLON
Rule 17    paramdecslast -> paramdecs
Rule 18    paramdecslast -> <empty>
Rule 19    procdec -> PROCEDURE ID OPEN_PAREN paramdecslast CLOSE_PAREN declistlast block SEMI_COLON
Rule 20    funcname -> FUNCTION ID
Rule 21    funcdec -> funcname OPEN_PAREN paramdecslast CLOSE_PAREN COLON type declistlast block SEMI_COLON
Rule 22    paramdecs -> paramdec
Rule 23    paramdecs -> paramdecs SEMI_COLON paramdec
Rule 24    paramdec -> type paramlist
Rule 25    paramlist -> ID
Rule 26    paramlist -> paramlist SEPARATOR ID
Rule 27    block -> BEGIN stmtlist END
Rule 28    block -> stmt
Rule 29    stmtlist -> stmt
Rule 30    stmtlist -> stmtlist SEMI_COLON stmt
Rule 31    lvalue -> ID
Rule 32    assignstmt -> lvalue ASSIGN exp
Rule 33    stmt -> assignstmt
Rule 34    stmt -> IF controlifexp THEN block
Rule 35    stmt -> IF controlifexp THEN block ELSE controlelse block
Rule 36    controlifexp -> exp
Rule 37    controlelse -> <empty>
Rule 38    stmt -> WHILE controlwhileexp DO block
Rule 39    controlwhileexp -> exp
Rule 40    stmt -> FOR assignstmt TO controlforupexp DO block
Rule 41    stmt -> FOR assignstmt DOWNTO controlfordownexp DO block
Rule 42    controlforupexp -> exp
Rule 43    controlfordownexp -> exp
Rule 44    stmt -> CASE controlcaseexp caseelement END
Rule 45    controlcaseexp -> exp
Rule 46    caseelement -> case COLON caseelementcontrol block SEMI_COLON
Rule 47    caseelement -> caseelement case COLON caseelementcontrol block SEMI_COLON
Rule 48    caseelementcontrol -> <empty>
Rule 49    case -> INTEGER
Rule 50    stmt -> RETURN exp
Rule 51    stmt -> exp
Rule 52    exp -> exp SUM exp
Rule 53    exp -> exp SUB exp
Rule 54    exp -> exp MUL exp
Rule 55    exp -> exp DIV exp
Rule 56    exp -> exp AND exp
Rule 57    exp -> exp OR exp
Rule 58    exp -> exp NE exp
Rule 59    exp -> exp EQ exp
Rule 60    exp -> exp LT exp
Rule 61    exp -> exp GT exp
Rule 62    exp -> exp LE exp
Rule 63    exp -> exp GE exp
Rule 64    exp -> OPEN_PAREN exp CLOSE_PAREN
Rule 65    exp -> REALNUMBER
Rule 66    exp -> INTEGER
Rule 67    exp -> TRUE
Rule 68    exp -> FALSE
Rule 69    exp -> lvalue
Rule 70    exp -> ID OPEN_PAREN explist CLOSE_PAREN
Rule 71    explist -> exp
Rule 72    explist -> explist SEPARATOR exp

Terminals, with rules where they appear

AND                  : 56
ASSIGN               : 13 32
BEGIN                : 27
BOOL                 : 11
CASE                 : 44
CLOSE_PAREN          : 19 21 64 70
COLON                : 21 46 47
DIV                  : 55
DO                   : 38 40 41
DOWNTO               : 41
ELSE                 : 35
END                  : 27 44
EQ                   : 59
FALSE                : 68
FOR                  : 40 41
FUNCTION             : 20
GE                   : 63
GT                   : 61
ID                   : 1 12 13 19 20 25 26 31 70
IF                   : 34 35
INT                  : 9
INTEGER              : 49 66
LE                   : 62
LT                   : 60
MUL                  : 54
NE                   : 58
OPEN_PAREN           : 19 21 64 70
OR                   : 57
PROCEDURE            : 19
PROGRAM              : 1
REAL                 : 10
REALNUMBER           : 65
RETURN               : 50
SEMI_COLON           : 1 1 16 19 21 23 30 46 47
SEPARATOR            : 15 26 72
SUB                  : 53
SUM                  : 52
THEN                 : 34 35
TO                   : 40
TRUE                 : 67
WHILE                : 38
error                : 

Nonterminals, with rules where they appear

assignstmt           : 33 40 41
block                : 1 19 21 34 35 35 38 40 41 46 47
case                 : 46 47
caseelement          : 44 47
caseelementcontrol   : 46 47
controlcaseexp       : 44
controlelse          : 35
controlfordownexp    : 41
controlforupexp      : 40
controlifexp         : 34 35
controlwhileexp      : 38
dec                  : 4 5
declist              : 2 5
declistlast          : 1 19 21
exp                  : 13 32 36 39 42 43 45 50 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 71 72
explist              : 70 72
funcdec              : 8
funcname             : 21
iddec                : 14 15
idlist               : 15 16
lvalue               : 32 69
paramdec             : 22 23
paramdecs            : 17 23
paramdecslast        : 19 21
paramlist            : 24 26
procdec              : 7
program              : 0
stmt                 : 28 29 30
stmtlist             : 27 30
type                 : 16 21 24
vardec               : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMI_COLON declistlast block SEMI_COLON

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMI_COLON declistlast block SEMI_COLON

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMI_COLON declistlast block SEMI_COLON

    SEMI_COLON      shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMI_COLON . declistlast block SEMI_COLON
    (2) declistlast -> . declist
    (3) declistlast -> .
    (4) declist -> . dec
    (5) declist -> . declist dec
    (6) dec -> . vardec
    (7) dec -> . procdec
    (8) dec -> . funcdec
    (16) vardec -> . type idlist SEMI_COLON
    (19) procdec -> . PROCEDURE ID OPEN_PAREN paramdecslast CLOSE_PAREN declistlast block SEMI_COLON
    (21) funcdec -> . funcname OPEN_PAREN paramdecslast CLOSE_PAREN COLON type declistlast block SEMI_COLON
    (9) type -> . INT
    (10) type -> . REAL
    (11) type -> . BOOL
    (20) funcname -> . FUNCTION ID

    BEGIN           reduce using rule 3 (declistlast -> .)
    IF              reduce using rule 3 (declistlast -> .)
    WHILE           reduce using rule 3 (declistlast -> .)
    FOR             reduce using rule 3 (declistlast -> .)
    CASE            reduce using rule 3 (declistlast -> .)
    RETURN          reduce using rule 3 (declistlast -> .)
    OPEN_PAREN      reduce using rule 3 (declistlast -> .)
    REALNUMBER      reduce using rule 3 (declistlast -> .)
    INTEGER         reduce using rule 3 (declistlast -> .)
    TRUE            reduce using rule 3 (declistlast -> .)
    FALSE           reduce using rule 3 (declistlast -> .)
    ID              reduce using rule 3 (declistlast -> .)
    PROCEDURE       shift and go to state 12
    INT             shift and go to state 14
    REAL            shift and go to state 15
    BOOL            shift and go to state 16
    FUNCTION        shift and go to state 17

    declistlast                    shift and go to state 5
    declist                        shift and go to state 6
    dec                            shift and go to state 7
    vardec                         shift and go to state 8
    procdec                        shift and go to state 9
    funcdec                        shift and go to state 10
    type                           shift and go to state 11
    funcname                       shift and go to state 13

state 5

    (1) program -> PROGRAM ID SEMI_COLON declistlast . block SEMI_COLON
    (27) block -> . BEGIN stmtlist END
    (28) block -> . stmt
    (33) stmt -> . assignstmt
    (34) stmt -> . IF controlifexp THEN block
    (35) stmt -> . IF controlifexp THEN block ELSE controlelse block
    (38) stmt -> . WHILE controlwhileexp DO block
    (40) stmt -> . FOR assignstmt TO controlforupexp DO block
    (41) stmt -> . FOR assignstmt DOWNTO controlfordownexp DO block
    (44) stmt -> . CASE controlcaseexp caseelement END
    (50) stmt -> . RETURN exp
    (51) stmt -> . exp
    (32) assignstmt -> . lvalue ASSIGN exp
    (52) exp -> . exp SUM exp
    (53) exp -> . exp SUB exp
    (54) exp -> . exp MUL exp
    (55) exp -> . exp DIV exp
    (56) exp -> . exp AND exp
    (57) exp -> . exp OR exp
    (58) exp -> . exp NE exp
    (59) exp -> . exp EQ exp
    (60) exp -> . exp LT exp
    (61) exp -> . exp GT exp
    (62) exp -> . exp LE exp
    (63) exp -> . exp GE exp
    (64) exp -> . OPEN_PAREN exp CLOSE_PAREN
    (65) exp -> . REALNUMBER
    (66) exp -> . INTEGER
    (67) exp -> . TRUE
    (68) exp -> . FALSE
    (69) exp -> . lvalue
    (70) exp -> . ID OPEN_PAREN explist CLOSE_PAREN
    (31) lvalue -> . ID

    BEGIN           shift and go to state 20
    IF              shift and go to state 23
    WHILE           shift and go to state 24
    FOR             shift and go to state 25
    CASE            shift and go to state 26
    RETURN          shift and go to state 27
    OPEN_PAREN      shift and go to state 30
    REALNUMBER      shift and go to state 31
    INTEGER         shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    ID              shift and go to state 18

    block                          shift and go to state 19
    stmt                           shift and go to state 21
    assignstmt                     shift and go to state 22
    exp                            shift and go to state 28
    lvalue                         shift and go to state 29

state 6

    (2) declistlast -> declist .
    (5) declist -> declist . dec
    (6) dec -> . vardec
    (7) dec -> . procdec
    (8) dec -> . funcdec
    (16) vardec -> . type idlist SEMI_COLON
    (19) procdec -> . PROCEDURE ID OPEN_PAREN paramdecslast CLOSE_PAREN declistlast block SEMI_COLON
    (21) funcdec -> . funcname OPEN_PAREN paramdecslast CLOSE_PAREN COLON type declistlast block SEMI_COLON
    (9) type -> . INT
    (10) type -> . REAL
    (11) type -> . BOOL
    (20) funcname -> . FUNCTION ID

    BEGIN           reduce using rule 2 (declistlast -> declist .)
    IF              reduce using rule 2 (declistlast -> declist .)
    WHILE           reduce using rule 2 (declistlast -> declist .)
    FOR             reduce using rule 2 (declistlast -> declist .)
    CASE            reduce using rule 2 (declistlast -> declist .)
    RETURN          reduce using rule 2 (declistlast -> declist .)
    OPEN_PAREN      reduce using rule 2 (declistlast -> declist .)
    REALNUMBER      reduce using rule 2 (declistlast -> declist .)
    INTEGER         reduce using rule 2 (declistlast -> declist .)
    TRUE            reduce using rule 2 (declistlast -> declist .)
    FALSE           reduce using rule 2 (declistlast -> declist .)
    ID              reduce using rule 2 (declistlast -> declist .)
    PROCEDURE       shift and go to state 12
    INT             shift and go to state 14
    REAL            shift and go to state 15
    BOOL            shift and go to state 16
    FUNCTION        shift and go to state 17

    dec                            shift and go to state 35
    vardec                         shift and go to state 8
    procdec                        shift and go to state 9
    funcdec                        shift and go to state 10
    type                           shift and go to state 11
    funcname                       shift and go to state 13

state 7

    (4) declist -> dec .

    PROCEDURE       reduce using rule 4 (declist -> dec .)
    INT             reduce using rule 4 (declist -> dec .)
    REAL            reduce using rule 4 (declist -> dec .)
    BOOL            reduce using rule 4 (declist -> dec .)
    FUNCTION        reduce using rule 4 (declist -> dec .)
    BEGIN           reduce using rule 4 (declist -> dec .)
    IF              reduce using rule 4 (declist -> dec .)
    WHILE           reduce using rule 4 (declist -> dec .)
    FOR             reduce using rule 4 (declist -> dec .)
    CASE            reduce using rule 4 (declist -> dec .)
    RETURN          reduce using rule 4 (declist -> dec .)
    OPEN_PAREN      reduce using rule 4 (declist -> dec .)
    REALNUMBER      reduce using rule 4 (declist -> dec .)
    INTEGER         reduce using rule 4 (declist -> dec .)
    TRUE            reduce using rule 4 (declist -> dec .)
    FALSE           reduce using rule 4 (declist -> dec .)
    ID              reduce using rule 4 (declist -> dec .)


state 8

    (6) dec -> vardec .

    PROCEDURE       reduce using rule 6 (dec -> vardec .)
    INT             reduce using rule 6 (dec -> vardec .)
    REAL            reduce using rule 6 (dec -> vardec .)
    BOOL            reduce using rule 6 (dec -> vardec .)
    FUNCTION        reduce using rule 6 (dec -> vardec .)
    BEGIN           reduce using rule 6 (dec -> vardec .)
    IF              reduce using rule 6 (dec -> vardec .)
    WHILE           reduce using rule 6 (dec -> vardec .)
    FOR             reduce using rule 6 (dec -> vardec .)
    CASE            reduce using rule 6 (dec -> vardec .)
    RETURN          reduce using rule 6 (dec -> vardec .)
    OPEN_PAREN      reduce using rule 6 (dec -> vardec .)
    REALNUMBER      reduce using rule 6 (dec -> vardec .)
    INTEGER         reduce using rule 6 (dec -> vardec .)
    TRUE            reduce using rule 6 (dec -> vardec .)
    FALSE           reduce using rule 6 (dec -> vardec .)
    ID              reduce using rule 6 (dec -> vardec .)


state 9

    (7) dec -> procdec .

    PROCEDURE       reduce using rule 7 (dec -> procdec .)
    INT             reduce using rule 7 (dec -> procdec .)
    REAL            reduce using rule 7 (dec -> procdec .)
    BOOL            reduce using rule 7 (dec -> procdec .)
    FUNCTION        reduce using rule 7 (dec -> procdec .)
    BEGIN           reduce using rule 7 (dec -> procdec .)
    IF              reduce using rule 7 (dec -> procdec .)
    WHILE           reduce using rule 7 (dec -> procdec .)
    FOR             reduce using rule 7 (dec -> procdec .)
    CASE            reduce using rule 7 (dec -> procdec .)
    RETURN          reduce using rule 7 (dec -> procdec .)
    OPEN_PAREN      reduce using rule 7 (dec -> procdec .)
    REALNUMBER      reduce using rule 7 (dec -> procdec .)
    INTEGER         reduce using rule 7 (dec -> procdec .)
    TRUE            reduce using rule 7 (dec -> procdec .)
    FALSE           reduce using rule 7 (dec -> procdec .)
    ID              reduce using rule 7 (dec -> procdec .)


state 10

    (8) dec -> funcdec .

    PROCEDURE       reduce using rule 8 (dec -> funcdec .)
    INT             reduce using rule 8 (dec -> funcdec .)
    REAL            reduce using rule 8 (dec -> funcdec .)
    BOOL            reduce using rule 8 (dec -> funcdec .)
    FUNCTION        reduce using rule 8 (dec -> funcdec .)
    BEGIN           reduce using rule 8 (dec -> funcdec .)
    IF              reduce using rule 8 (dec -> funcdec .)
    WHILE           reduce using rule 8 (dec -> funcdec .)
    FOR             reduce using rule 8 (dec -> funcdec .)
    CASE            reduce using rule 8 (dec -> funcdec .)
    RETURN          reduce using rule 8 (dec -> funcdec .)
    OPEN_PAREN      reduce using rule 8 (dec -> funcdec .)
    REALNUMBER      reduce using rule 8 (dec -> funcdec .)
    INTEGER         reduce using rule 8 (dec -> funcdec .)
    TRUE            reduce using rule 8 (dec -> funcdec .)
    FALSE           reduce using rule 8 (dec -> funcdec .)
    ID              reduce using rule 8 (dec -> funcdec .)


state 11

    (16) vardec -> type . idlist SEMI_COLON
    (14) idlist -> . iddec
    (15) idlist -> . idlist SEPARATOR iddec
    (12) iddec -> . ID
    (13) iddec -> . ID ASSIGN exp

    ID              shift and go to state 38

    idlist                         shift and go to state 36
    iddec                          shift and go to state 37

state 12

    (19) procdec -> PROCEDURE . ID OPEN_PAREN paramdecslast CLOSE_PAREN declistlast block SEMI_COLON

    ID              shift and go to state 39


state 13

    (21) funcdec -> funcname . OPEN_PAREN paramdecslast CLOSE_PAREN COLON type declistlast block SEMI_COLON

    OPEN_PAREN      shift and go to state 40


state 14

    (9) type -> INT .

    ID              reduce using rule 9 (type -> INT .)
    PROCEDURE       reduce using rule 9 (type -> INT .)
    INT             reduce using rule 9 (type -> INT .)
    REAL            reduce using rule 9 (type -> INT .)
    BOOL            reduce using rule 9 (type -> INT .)
    FUNCTION        reduce using rule 9 (type -> INT .)
    BEGIN           reduce using rule 9 (type -> INT .)
    IF              reduce using rule 9 (type -> INT .)
    WHILE           reduce using rule 9 (type -> INT .)
    FOR             reduce using rule 9 (type -> INT .)
    CASE            reduce using rule 9 (type -> INT .)
    RETURN          reduce using rule 9 (type -> INT .)
    OPEN_PAREN      reduce using rule 9 (type -> INT .)
    REALNUMBER      reduce using rule 9 (type -> INT .)
    INTEGER         reduce using rule 9 (type -> INT .)
    TRUE            reduce using rule 9 (type -> INT .)
    FALSE           reduce using rule 9 (type -> INT .)


state 15

    (10) type -> REAL .

    ID              reduce using rule 10 (type -> REAL .)
    PROCEDURE       reduce using rule 10 (type -> REAL .)
    INT             reduce using rule 10 (type -> REAL .)
    REAL            reduce using rule 10 (type -> REAL .)
    BOOL            reduce using rule 10 (type -> REAL .)
    FUNCTION        reduce using rule 10 (type -> REAL .)
    BEGIN           reduce using rule 10 (type -> REAL .)
    IF              reduce using rule 10 (type -> REAL .)
    WHILE           reduce using rule 10 (type -> REAL .)
    FOR             reduce using rule 10 (type -> REAL .)
    CASE            reduce using rule 10 (type -> REAL .)
    RETURN          reduce using rule 10 (type -> REAL .)
    OPEN_PAREN      reduce using rule 10 (type -> REAL .)
    REALNUMBER      reduce using rule 10 (type -> REAL .)
    INTEGER         reduce using rule 10 (type -> REAL .)
    TRUE            reduce using rule 10 (type -> REAL .)
    FALSE           reduce using rule 10 (type -> REAL .)


state 16

    (11) type -> BOOL .

    ID              reduce using rule 11 (type -> BOOL .)
    PROCEDURE       reduce using rule 11 (type -> BOOL .)
    INT             reduce using rule 11 (type -> BOOL .)
    REAL            reduce using rule 11 (type -> BOOL .)
    BOOL            reduce using rule 11 (type -> BOOL .)
    FUNCTION        reduce using rule 11 (type -> BOOL .)
    BEGIN           reduce using rule 11 (type -> BOOL .)
    IF              reduce using rule 11 (type -> BOOL .)
    WHILE           reduce using rule 11 (type -> BOOL .)
    FOR             reduce using rule 11 (type -> BOOL .)
    CASE            reduce using rule 11 (type -> BOOL .)
    RETURN          reduce using rule 11 (type -> BOOL .)
    OPEN_PAREN      reduce using rule 11 (type -> BOOL .)
    REALNUMBER      reduce using rule 11 (type -> BOOL .)
    INTEGER         reduce using rule 11 (type -> BOOL .)
    TRUE            reduce using rule 11 (type -> BOOL .)
    FALSE           reduce using rule 11 (type -> BOOL .)


state 17

    (20) funcname -> FUNCTION . ID

    ID              shift and go to state 41


state 18

    (70) exp -> ID . OPEN_PAREN explist CLOSE_PAREN
    (31) lvalue -> ID .

    OPEN_PAREN      shift and go to state 42
    ASSIGN          reduce using rule 31 (lvalue -> ID .)
    SUM             reduce using rule 31 (lvalue -> ID .)
    SUB             reduce using rule 31 (lvalue -> ID .)
    MUL             reduce using rule 31 (lvalue -> ID .)
    DIV             reduce using rule 31 (lvalue -> ID .)
    AND             reduce using rule 31 (lvalue -> ID .)
    OR              reduce using rule 31 (lvalue -> ID .)
    NE              reduce using rule 31 (lvalue -> ID .)
    EQ              reduce using rule 31 (lvalue -> ID .)
    LT              reduce using rule 31 (lvalue -> ID .)
    GT              reduce using rule 31 (lvalue -> ID .)
    LE              reduce using rule 31 (lvalue -> ID .)
    GE              reduce using rule 31 (lvalue -> ID .)
    SEMI_COLON      reduce using rule 31 (lvalue -> ID .)
    END             reduce using rule 31 (lvalue -> ID .)
    THEN            reduce using rule 31 (lvalue -> ID .)
    DO              reduce using rule 31 (lvalue -> ID .)
    INTEGER         reduce using rule 31 (lvalue -> ID .)
    ELSE            reduce using rule 31 (lvalue -> ID .)
    CLOSE_PAREN     reduce using rule 31 (lvalue -> ID .)
    SEPARATOR       reduce using rule 31 (lvalue -> ID .)
    TO              reduce using rule 31 (lvalue -> ID .)
    DOWNTO          reduce using rule 31 (lvalue -> ID .)


state 19

    (1) program -> PROGRAM ID SEMI_COLON declistlast block . SEMI_COLON

    SEMI_COLON      shift and go to state 43


state 20

    (27) block -> BEGIN . stmtlist END
    (29) stmtlist -> . stmt
    (30) stmtlist -> . stmtlist SEMI_COLON stmt
    (33) stmt -> . assignstmt
    (34) stmt -> . IF controlifexp THEN block
    (35) stmt -> . IF controlifexp THEN block ELSE controlelse block
    (38) stmt -> . WHILE controlwhileexp DO block
    (40) stmt -> . FOR assignstmt TO controlforupexp DO block
    (41) stmt -> . FOR assignstmt DOWNTO controlfordownexp DO block
    (44) stmt -> . CASE controlcaseexp caseelement END
    (50) stmt -> . RETURN exp
    (51) stmt -> . exp
    (32) assignstmt -> . lvalue ASSIGN exp
    (52) exp -> . exp SUM exp
    (53) exp -> . exp SUB exp
    (54) exp -> . exp MUL exp
    (55) exp -> . exp DIV exp
    (56) exp -> . exp AND exp
    (57) exp -> . exp OR exp
    (58) exp -> . exp NE exp
    (59) exp -> . exp EQ exp
    (60) exp -> . exp LT exp
    (61) exp -> . exp GT exp
    (62) exp -> . exp LE exp
    (63) exp -> . exp GE exp
    (64) exp -> . OPEN_PAREN exp CLOSE_PAREN
    (65) exp -> . REALNUMBER
    (66) exp -> . INTEGER
    (67) exp -> . TRUE
    (68) exp -> . FALSE
    (69) exp -> . lvalue
    (70) exp -> . ID OPEN_PAREN explist CLOSE_PAREN
    (31) lvalue -> . ID

    IF              shift and go to state 23
    WHILE           shift and go to state 24
    FOR             shift and go to state 25
    CASE            shift and go to state 26
    RETURN          shift and go to state 27
    OPEN_PAREN      shift and go to state 30
    REALNUMBER      shift and go to state 31
    INTEGER         shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    ID              shift and go to state 18

    stmtlist                       shift and go to state 44
    stmt                           shift and go to state 45
    assignstmt                     shift and go to state 22
    exp                            shift and go to state 28
    lvalue                         shift and go to state 29

state 21

    (28) block -> stmt .

    SEMI_COLON      reduce using rule 28 (block -> stmt .)
    ELSE            reduce using rule 28 (block -> stmt .)
    END             reduce using rule 28 (block -> stmt .)


state 22

    (33) stmt -> assignstmt .

    SEMI_COLON      reduce using rule 33 (stmt -> assignstmt .)
    END             reduce using rule 33 (stmt -> assignstmt .)
    ELSE            reduce using rule 33 (stmt -> assignstmt .)


state 23

    (34) stmt -> IF . controlifexp THEN block
    (35) stmt -> IF . controlifexp THEN block ELSE controlelse block
    (36) controlifexp -> . exp
    (52) exp -> . exp SUM exp
    (53) exp -> . exp SUB exp
    (54) exp -> . exp MUL exp
    (55) exp -> . exp DIV exp
    (56) exp -> . exp AND exp
    (57) exp -> . exp OR exp
    (58) exp -> . exp NE exp
    (59) exp -> . exp EQ exp
    (60) exp -> . exp LT exp
    (61) exp -> . exp GT exp
    (62) exp -> . exp LE exp
    (63) exp -> . exp GE exp
    (64) exp -> . OPEN_PAREN exp CLOSE_PAREN
    (65) exp -> . REALNUMBER
    (66) exp -> . INTEGER
    (67) exp -> . TRUE
    (68) exp -> . FALSE
    (69) exp -> . lvalue
    (70) exp -> . ID OPEN_PAREN explist CLOSE_PAREN
    (31) lvalue -> . ID

    OPEN_PAREN      shift and go to state 30
    REALNUMBER      shift and go to state 31
    INTEGER         shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    ID              shift and go to state 18

    controlifexp                   shift and go to state 46
    exp                            shift and go to state 47
    lvalue                         shift and go to state 48

state 24

    (38) stmt -> WHILE . controlwhileexp DO block
    (39) controlwhileexp -> . exp
    (52) exp -> . exp SUM exp
    (53) exp -> . exp SUB exp
    (54) exp -> . exp MUL exp
    (55) exp -> . exp DIV exp
    (56) exp -> . exp AND exp
    (57) exp -> . exp OR exp
    (58) exp -> . exp NE exp
    (59) exp -> . exp EQ exp
    (60) exp -> . exp LT exp
    (61) exp -> . exp GT exp
    (62) exp -> . exp LE exp
    (63) exp -> . exp GE exp
    (64) exp -> . OPEN_PAREN exp CLOSE_PAREN
    (65) exp -> . REALNUMBER
    (66) exp -> . INTEGER
    (67) exp -> . TRUE
    (68) exp -> . FALSE
    (69) exp -> . lvalue
    (70) exp -> . ID OPEN_PAREN explist CLOSE_PAREN
    (31) lvalue -> . ID

    OPEN_PAREN      shift and go to state 30
    REALNUMBER      shift and go to state 31
    INTEGER         shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    ID              shift and go to state 18

    controlwhileexp                shift and go to state 49
    exp                            shift and go to state 50
    lvalue                         shift and go to state 48

state 25

    (40) stmt -> FOR . assignstmt TO controlforupexp DO block
    (41) stmt -> FOR . assignstmt DOWNTO controlfordownexp DO block
    (32) assignstmt -> . lvalue ASSIGN exp
    (31) lvalue -> . ID

    ID              shift and go to state 53

    assignstmt                     shift and go to state 51
    lvalue                         shift and go to state 52

state 26

    (44) stmt -> CASE . controlcaseexp caseelement END
    (45) controlcaseexp -> . exp
    (52) exp -> . exp SUM exp
    (53) exp -> . exp SUB exp
    (54) exp -> . exp MUL exp
    (55) exp -> . exp DIV exp
    (56) exp -> . exp AND exp
    (57) exp -> . exp OR exp
    (58) exp -> . exp NE exp
    (59) exp -> . exp EQ exp
    (60) exp -> . exp LT exp
    (61) exp -> . exp GT exp
    (62) exp -> . exp LE exp
    (63) exp -> . exp GE exp
    (64) exp -> . OPEN_PAREN exp CLOSE_PAREN
    (65) exp -> . REALNUMBER
    (66) exp -> . INTEGER
    (67) exp -> . TRUE
    (68) exp -> . FALSE
    (69) exp -> . lvalue
    (70) exp -> . ID OPEN_PAREN explist CLOSE_PAREN
    (31) lvalue -> . ID

    OPEN_PAREN      shift and go to state 30
    REALNUMBER      shift and go to state 31
    INTEGER         shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    ID              shift and go to state 18

    controlcaseexp                 shift and go to state 54
    exp                            shift and go to state 55
    lvalue                         shift and go to state 48

state 27

    (50) stmt -> RETURN . exp
    (52) exp -> . exp SUM exp
    (53) exp -> . exp SUB exp
    (54) exp -> . exp MUL exp
    (55) exp -> . exp DIV exp
    (56) exp -> . exp AND exp
    (57) exp -> . exp OR exp
    (58) exp -> . exp NE exp
    (59) exp -> . exp EQ exp
    (60) exp -> . exp LT exp
    (61) exp -> . exp GT exp
    (62) exp -> . exp LE exp
    (63) exp -> . exp GE exp
    (64) exp -> . OPEN_PAREN exp CLOSE_PAREN
    (65) exp -> . REALNUMBER
    (66) exp -> . INTEGER
    (67) exp -> . TRUE
    (68) exp -> . FALSE
    (69) exp -> . lvalue
    (70) exp -> . ID OPEN_PAREN explist CLOSE_PAREN
    (31) lvalue -> . ID

    OPEN_PAREN      shift and go to state 30
    REALNUMBER      shift and go to state 31
    INTEGER         shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    ID              shift and go to state 18

    exp                            shift and go to state 56
    lvalue                         shift and go to state 48

state 28

    (51) stmt -> exp .
    (52) exp -> exp . SUM exp
    (53) exp -> exp . SUB exp
    (54) exp -> exp . MUL exp
    (55) exp -> exp . DIV exp
    (56) exp -> exp . AND exp
    (57) exp -> exp . OR exp
    (58) exp -> exp . NE exp
    (59) exp -> exp . EQ exp
    (60) exp -> exp . LT exp
    (61) exp -> exp . GT exp
    (62) exp -> exp . LE exp
    (63) exp -> exp . GE exp

    SEMI_COLON      reduce using rule 51 (stmt -> exp .)
    END             reduce using rule 51 (stmt -> exp .)
    ELSE            reduce using rule 51 (stmt -> exp .)
    SUM             shift and go to state 57
    SUB             shift and go to state 58
    MUL             shift and go to state 59
    DIV             shift and go to state 60
    AND             shift and go to state 61
    OR              shift and go to state 62
    NE              shift and go to state 63
    EQ              shift and go to state 64
    LT              shift and go to state 65
    GT              shift and go to state 66
    LE              shift and go to state 67
    GE              shift and go to state 68


state 29

    (32) assignstmt -> lvalue . ASSIGN exp
    (69) exp -> lvalue .

    ASSIGN          shift and go to state 69
    SUM             reduce using rule 69 (exp -> lvalue .)
    SUB             reduce using rule 69 (exp -> lvalue .)
    MUL             reduce using rule 69 (exp -> lvalue .)
    DIV             reduce using rule 69 (exp -> lvalue .)
    AND             reduce using rule 69 (exp -> lvalue .)
    OR              reduce using rule 69 (exp -> lvalue .)
    NE              reduce using rule 69 (exp -> lvalue .)
    EQ              reduce using rule 69 (exp -> lvalue .)
    LT              reduce using rule 69 (exp -> lvalue .)
    GT              reduce using rule 69 (exp -> lvalue .)
    LE              reduce using rule 69 (exp -> lvalue .)
    GE              reduce using rule 69 (exp -> lvalue .)
    SEMI_COLON      reduce using rule 69 (exp -> lvalue .)
    END             reduce using rule 69 (exp -> lvalue .)
    ELSE            reduce using rule 69 (exp -> lvalue .)


state 30

    (64) exp -> OPEN_PAREN . exp CLOSE_PAREN
    (52) exp -> . exp SUM exp
    (53) exp -> . exp SUB exp
    (54) exp -> . exp MUL exp
    (55) exp -> . exp DIV exp
    (56) exp -> . exp AND exp
    (57) exp -> . exp OR exp
    (58) exp -> . exp NE exp
    (59) exp -> . exp EQ exp
    (60) exp -> . exp LT exp
    (61) exp -> . exp GT exp
    (62) exp -> . exp LE exp
    (63) exp -> . exp GE exp
    (64) exp -> . OPEN_PAREN exp CLOSE_PAREN
    (65) exp -> . REALNUMBER
    (66) exp -> . INTEGER
    (67) exp -> . TRUE
    (68) exp -> . FALSE
    (69) exp -> . lvalue
    (70) exp -> . ID OPEN_PAREN explist CLOSE_PAREN
    (31) lvalue -> . ID

    OPEN_PAREN      shift and go to state 30
    REALNUMBER      shift and go to state 31
    INTEGER         shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    ID              shift and go to state 18

    exp                            shift and go to state 70
    lvalue                         shift and go to state 48

state 31

    (65) exp -> REALNUMBER .
